# RayTracing

./: .gitignore  CMakeLists.txt
gprof/: gmon.out  profile_report.txt
src/: aabb.h  bvh.h  camera.h  color.h  constUtilFuncs.h  hittable.h  hittable_list.h  interval.h  main.cpp  material.h  perlin.h  quad.h  ray.h  sphere.h  stb_image_rt.h  texture.h  vec3.h
